<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
    <string name="rss_posts">Whats New</string>
    <string name="refresh_action">Refresh</string>
    <string name="error_loading_documents">Loading Documents failed</string>
    <string name="error_loading_orders">Loading Orders failed</string>
    <string name="error_loading_posts">Loading posts failed</string>
    <string name="error_loading_content">Loading content failed</string>
    <string name="no_documents">No Documents</string>
    <string name="no_documents_description">There are no downloadable documents right now.</string>
    <string name="no_orders">No transactions yet</string>
    <string name="no_orders_description">Your purchased orders will be reflected here.</string>
    <string name="no_posts">No Articles</string>
    <string name="no_discussions">No Discussions</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">Please Wait...</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="please_login">Please login to see the content</string>
    <string name="network_error">Network Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet">Please check your internet connection &amp; refresh again</string>
    <string name="no_internet_try_again">Please check your internet connection &amp; try again</string>
    <string name="try_after_sometime">Please try after sometime</string>
    <string name="something_went_wrong_please_try_after">Something went wrong, please try after sometime</string>
    <string name="edit_profile_error">Right now edit profile is unavailable. Try again later.</string>
    <string name="max_login_limit_exceeded_error">Your account has been locked as it has exceeded maximum devices it can be used.</string>
    <string name="account_unlock_info">Your account will automatically get unlocked within </string>
    <string name="error_loading_courses">Loading courses failed</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="label_phone">Phone</string>
    <string name="label_logging_out">Logging Out...</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_success_message">We have sent you an email with a link to reset your password. Please check your email and click the link to continue.</string>
    <string name="reset_error_message">Email address is invalid. Please enter a registered email address. </string>
    <string name="manually_verify">Manually Verify</string>
    <string name="label_ask_code">Enter the code sent via sms</string>
    <string name="message_verifying">Verifying code</string>
    <string name="label_fill_all_details">*Please fill all details</string>
    <string name="register">Register</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="invalid_username_or_password">Invalid username/password</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="all_posts">All Posts</string>
    <string name="all_discussions">All Discussions</string>
    <string name="live_classes">Live Classes</string>
    <string name="categories">Categories</string>
    <string name="title_activity_reset_password_verification">ResetPasswordVerificationActivity
    </string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="no_posts_description">There are no posts right now.</string>
    <string name="post_authentication_failed">Sorry, you don\'t have access to this article.</string>
    <string name="access_denied">Access denied</string>
    <string name="share">Share</string>
    <string name="login_activity">Login Activity</string>
    <string name="invalid_post">Invalid Article</string>
    <string name="learn">Learn</string>
    <string name="downloads">Downloads</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up with Email</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="google_sign_in_wrong_hash">Google sign in error, please contact the administrator to check key hashes.</string>
    <string name="google_signin_not_configured">Google Sign-In is not configured for this application.</string>
    <string name="logout">Log Out</string>
    <string name="logout_confirm_message">Are you sure you want to log out?</string>
    <string name="activation_email_sent_message">An activation email has been sent. Please check your email and click on the link to activate your account.</string>
    <string name="activate">Activate</string>
    <string name="activate_completed_title">Activation complete</string>
    <string name="activate_completed_message">Thanks, activation complete! You may now login using the username and password you set at registration.</string>
    <string name="activate_incomplete_title">Activation problem</string>
    <string name="activate_incomplete_message">It seems that the activation key is invalid. Please check the url again.</string>
    <string name="login">Login</string>
    <string name="comments_title">Comments</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="load_previous_comments">Load previous comments</string>
    <string name="load_new_comments">Load new comments</string>
    <string name="load_comments">Load comments</string>
    <string name="comment_posted">Comment posted successfully</string>
    <string name="no_comments">Be the first to post a comment</string>
    <string name="not_supported">Not supported</string>
    <string name="wrong_url">Url is Incorrect / Not supported.</string>
    <string name="browser_not_available">You need a browser app to this action.</string>
    <string name="my_exams">My Exams</string>
    <string name="store">Store</string>
    <string name="posts">Posts</string>
    <string name="forum">Forum</string>
    <string name="article">Article</string>
    <string name="discussions">Discussions</string>
    <string name="documents">Documents</string>
    <string name="analytics">Analytics</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="rate_us">Rate Us</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="about_us">About Us</string>
    <string name="student_report">Student Report</string>
    <string name="update">Update</string>
    <string name="view_in_website">View in Website</string>
    <string name="update_your_app">Update Your App!</string>
    <string name="remained_later">Remind Later</string>
    <string name="file_path_not_suitable">Oops!, can\'t access this file path. Please try another folder</string>
    <string name="posts_channel">Updates/News/Posts</string>
    <string name="contents_channel">New Contents</string>
    <string name="notification_summary_content">%d new notifications</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="get_it_at"> Get it at \t </string>
    <string name="testpress_new_comments">New Comments</string>
    <string name="testpress_post_title">Post title</string>
    <string name="testpress_pick_a_topic">Pick a topic</string>
    <string name="testpress_post_content">Post Content</string>
    <string name="testpress_publish">Publish</string>
    <string name="articles">Articles</string>
    <string name="privacy_policy_text"><u>Privacy Policy</u></string>
    <string name="title_must_be_min_3_characters">The title must be at least 3 characters.</string>
    <string name="title_must_be_max_200_characters">The title must be less than 200 characters.</string>
    <string name="content_field_required">The content field is required.</string>
    <string name="image_cleared">Image cleared!</string>
    <string name="posted_successfully">Posted successfully!</string>
    <string name="create_post">Create Post</string>
    <string name="resend_verification_sms">Resend Verification SMS</string>
    <string name="empty_input_error">This field cannot be empty.</string>
    <string name="username_error">This field can contain only lowercase alphabets and numbers.</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="phone_number_error">Please enter a valid mobile number</string>
    <string name="password_error">Password should contain at least 6 characters</string>
    <string name="password_mismatch_error">Passwords don\'t match</string>
    <string name="PARALLEL_LOGIN_RESTRICTION_ERROR_CODE">parallel_login_restriction</string>
    <string name="MAX_LOGIN_EXCEEDED_ERROR_CODE">max_login_exceeded</string>
    <string name="DEVICE_ALREADY_BOUND_ERROR_CODE">device_already_bound</string>
    <string name="UNAUTHORIZED_DEVICE_ERROR_CODE">unauthorized_device</string>
    <string name="no_data_available">No data available</string>
    <string name="try_after_some_time">Please try after some time</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="privacy_policy_dialogue">By signing in you acknowledge our  </string>
    <string name="privacy_policy"><a href='#'> Privacy Policy</a></string>
    <string name="tests">Tests</string>
    <string name="classes">Classes</string>
    <string name="info">Info</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <plurals name="content_count">
        <item quantity="one">1 Content</item>
        <item quantity="other">%d Contents</item>
    </plurals>
    <plurals name="chapter_count">
        <item quantity="one">1 Chapter</item>
        <item quantity="other">%d Chapters</item>
    </plurals>
    <string name="testpress_login_with_different_account">Login with different account</string>
    <string name="capture_photo">Capture photo</string>
    <string name="close_camera">Close camera</string>
    <string name="camera_permission_denied">Camera permissions not granted by the user.</string>
    <string name="image_creation_failed">Failed to create image file.</string>
    <string name="exam_results">Results</string>
    <string name="exam_results_col_date">Date</string>
    <string name="exam_results_col_examname">Exam Name</string>
    <string name="exam_results_col_rollno">Roll No</string>
    <string name="exam_results_col_physics">PHY</string>
    <string name="exam_results_col_chemistry">CHE</string>
    <string name="exam_results_col_biology">BIO</string>
    <string name="exam_results_col_maths">MAT</string>
    <string name="exam_results_col_aptitude">APT</string>
    <string name="exam_results_col_drawing">DRW</string>
    <string name="exam_results_col_p1">P-I</string>
    <string name="exam_results_col_p2">P-II</string>
    <string name="exam_results_col_totalmarks">Total</string>
    <string name="exam_results_col_maxmarks">Max</string>
    <string name="exam_results_col_highestmarks">Highest</string>
    <string name="exam_results_col_percent">%</string>
    <string name="exam_results_col_grade">Grade</string>
</resources>