<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/et_username"
                style="@style/SignInEditText"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/et_email"
                android:hint="@string/label_username" />
            <EditText
                android:id="@+id/et_email"
                style="@style/SignInEditText"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/et_phone"
                android:inputType="textEmailAddress"
                android:hint="@string/label_email"/>

            <EditText
                style="@style/SignInEditText"
                android:inputType="phone"
                android:id="@+id/et_phone"
                android:nextFocusDown="@+id/et_password"
                android:hint="@string/label_phone"/>

            <EditText
                android:id="@+id/et_password"
                style="@style/SignInEditText"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/et_password_confirm"
                android:hint="@string/label_password" />

            <EditText
                android:id="@+id/et_password_confirm"
                style="@style/SignInEditText"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:hint="@string/label_confirm_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_fill_all_details"
                android:textColor="@color/red"
                android:id="@+id/tv_fill_all_details"/>

            <Button
                android:id="@+id/b_register"
                style="@style/ShadowText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_background_states"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:enabled="false"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>