<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressLoading"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <include layout="@layout/empty_view" />

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:layout_centerInParent="true"
            android:paddingRight="24dp"
            android:orientation="vertical" >

            <ImageView
                android:src="@drawable/login_screen_image"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView2" />

            <!-- Username Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameTextInputLayout"
                    android:layout_width="match_parent"
                    android:paddingBottom="2dp"
                    android:layout_height="@dimen/input_height"
                    android:theme="@style/TextLabel">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextUserName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        style="@style/Input"
                        android:hint="@string/label_username" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/usernameErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/InputError"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_textInput_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:theme="@style/TextLabel"
                app:passwordToggleEnabled="true">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:imeOptions="actionSend"
                    style="@style/Input"
                    android:hint="@string/label_password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/passwordErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/InputError"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="Login"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" >

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/forgot_password" />

                <TextView
                    android:id="@+id/TextViewResendVerification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forgotPassword"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/resend_verification_sms"
                    android:textColor="@color/primary" />

                <TextView
                    android:id="@+id/signUpWithEmail"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/primary"
                    android:text="@string/sign_up" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/social_sign_in_buttons"
                android:orientation="vertical"
                android:gravity="center" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:background="#ccc" />

                    <TextView
                        android:id="@+id/textViewOr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:text="@string/or"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="100dp"
                        android:layout_height="1dp"
                        android:background="#ccc" />

                </LinearLayout>

                <com.facebook.login.widget.LoginButton
                    xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/facebookLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="10dp"
                    facebook:com_facebook_login_text="@string/login_with_facebook" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/googleSignInButton"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_with_google"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:paddingRight="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/google_plus_signin_btn_text_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
