<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fbutton="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff"
              android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                android:layout_marginBottom="20dp"/>

            <!-- Username Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:visibility="gone"
                    android:nextFocusDown="@+id/et_verificationCode"
                    android:hint="@string/label_username" />
            </android.support.design.widget.TextInputLayout>

            <!-- Verification Code -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_verificationCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:visibility="gone"
                    android:hint="@string/label_ask_code"/>
            </android.support.design.widget.TextInputLayout>

            <info.hoang8f.widget.FButton
                android:id="@+id/b_verify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                fbutton:buttonColor="@color/primary"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="2dp"
                android:layout_marginTop="20dp"
                android:text="@string/verify"
                android:visibility="gone"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/sms_receiving_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/welcome"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:id="@+id/count"
                    android:text="30s"
                    android:padding="10dp"
                    android:textSize="20sp"/>

                <ProgressBar
                    android:id="@+id/progressbar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:max="30"
                    android:progress="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <info.hoang8f.widget.FButton
                    android:id="@+id/b_manually_verify"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    fbutton:buttonColor="@color/primary"
                    fbutton:shadowEnabled="true"
                    fbutton:shadowHeight="5dp"
                    fbutton:cornerRadius="2dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/manually_verify"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>